# Epsilon

./: README.md  pyproject.toml
epsilon/apps/: clickifyhello.yaml  clickifyparams.py  greet.yaml  greet_cab.yaml  utilities.py
epsilon/apps/greetings/: clickifyhello.py  greet.yaml
epsilon/apps/write2model/: predict.yaml  predict_cab.yaml  writetomodel.py
epsilon/tests/: testcat.txt
recipes/: hello-world-stepsequence-add.yml  kgb_kubeconfig.yaml  kubeconfig.yaml  luno_movie.yaml
