[tool.poetry]
name = "epsilon"
version = "0.1.0"
description = "Africalim project"
authors = ["Mika Naidoo <mika.naidoo25@egmail.com>", "Coral Pillay <coralgpillay@gmail.com>", "Victoria Nakafingo <eggscellent4@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
cult-cargo = "^0.1.3"
kubernetes = "^31.0.0"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"

[tool.poetry.scripts]
greet = "epsilon.apps.greetings.clickifyparams:runit"
write2mod = "epsilon.apps.write2model.writetomodel:runit"