[tool.poetry]
name = "epsilon"
version = "0.1.0"
description = "Africalim project"
authors = ["Mika Naidoo <mika.naidoo25@egmail.com>", "Coral Pillay <coralgpillay@gmail.com>", "Victoria Nakafingo <eggscellent4@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cult-cargo = "^0.1.3"
kubernetes = "^31.0.0"
click = "^8.1.3"
numpy = "<2.1"
astropy = "^7.0.0"
dask = "^2024.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"

[tool.poetry.scripts]
greet = "epsilon.apps.greetings.clickifyparams:runit"
predict = "epsilon.apps.write2model.writetomodel:runit"